--- a/2FACE/popup.html
+++ b/2FACE/popup.html
@@ -3,6 +3,7 @@
 <head>
   <title>2FACE</title>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="icons/icon16.png">
   <link rel="stylesheet" href="popup.css">
   <!-- Load dependencies first -->
   <script src="crypto.js"></script>
